[project]
name = "bloghub"
version = "1.0"
description = "Default template for PDM package"
authors = [
    {name = "AstonWang",email = "sswss5@aliyun.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
core = [
    "mkdocs-material>=9.5.30",
]
plugins = [
    "mkdocs-git-committers-plugin>=0.2.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2.6",
    "mkdocs-git-authors-plugin>=0.9.0",
    "mkdocs-git-committers-plugin-2>=2.3.0",
    "mkdocs-rss-plugin>=1.15.0",
]


[tool.pdm]
distribution = false
