[project]
name = "bloghub"
version = "0.1.0"
description = "AstonWang's Blog and Notehub"
authors = [
    {name = "AstonWang", email = "sswss5@aliyun.com"},
]
dependencies = [
    "mkdocs-material>=9.5.32",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
plugins = [
    "mkdocs-git-committers-plugin-2>=2.3.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.7",
    "pymdown-extensions>=10.9",
    "jinja2>=3.1.4",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-markdownextradata-plugin>=0.2.5",
]
[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "mkdocs serve"